--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ header .social-icon select option {
   width: 38%;
   float: right;
   margin-right: 92px;
-  padding: 106px 0 178px 0;
+  padding: 106px 0 105px 0;
 }
 .top-wrapper_center .container .slider__content-wrapper h1 {
   font-weight: 900;
@@ -187,6 +187,9 @@ header .social-icon select option {
 .top-wrapper_center .container .slider__content-wrapper button:focus {
   background: #000000;
   color: #fff51f;
+}
+.top-wrapper_center .container .slider__content-wrapper button:active {
+  box-shadow: 2px 2px #fff51f inset, -2px -2px #fff51f inset;
 }
 .user__basket {
   font-family: 'Raleway', sans-serif;
@@ -311,6 +314,14 @@ header .social-icon select option {
   background: #333 url(../img/search-button-icon.png) 50% 50% no-repeat;
   border: none;
   cursor: pointer;
+  opacity: 1;
+}
+.user__basket .search__cart button:hover,
+.user__basket .search__cart button:focus {
+  opacity: 0.5;
+}
+.user__basket .search__cart button:active {
+  box-shadow: 2px 2px #000 inset, -2px -2px #000 inset;
 }
 .box__welcome {
   font-family: 'Raleway', sans-serif;
