--- a/less/style.less
+++ b/less/style.less
@@ -87,14 +87,13 @@ header {
 		float: right;
 		width: 74%;
 		
-		
 		.slider__content-wrapper{
 			color: #fff51f;
 		    .raleway;
 		    width: 38%;
 		    float: right;
 		    margin-right: 92px;
-	        padding: 106px 0 178px 0;
+	        padding: 106px 0 105px 0;
 		
 			h1 {
 				font-weight: 900;
@@ -125,6 +124,10 @@ header {
 				&:focus {
 					background: rgba(0, 0, 0, 1);
 					color: rgba(255, 245, 31, 1);
+				}
+
+				&:active {
+					box-shadow: 2px 2px rgba(255, 245, 31, 1) inset,-2px -2px rgba(255, 245, 31, 1) inset;
 				}
 			}
 		}
@@ -276,6 +279,16 @@ header {
 			background: @main-font-color url(../img/search-button-icon.png) 50% 50% no-repeat;
 			border: none;
 			cursor: pointer;
+			opacity: 1;
+
+			&:hover,
+			&:focus {
+				opacity: 0.5;
+			}
+
+			&:active {
+				box-shadow: 2px 2px #000 inset,-2px -2px #000 inset;
+			}
 		}
 	}
 }
