--- a/less/style.less
+++ b/less/style.less
@@ -358,6 +358,10 @@ aside {
 	  	text-transform: uppercase;
   	    z-index: 10;
 
+  	    @media screen and (max-width: 800px) {
+			display: none;
+  	    }
+
 	  	h2 {
   		    padding: 29px 0 20px 42px;
 			color: #fff;
@@ -435,7 +439,9 @@ aside {
 			color: #fff;
 		}
 	}
+    /***mobile__navigation ***/
 
+    /***mobile__navigation ***/
 	.banner__block {
 		margin: 33px 0 0 0;
 		width: 49%;
@@ -689,6 +695,7 @@ aside {
 
 	.brand__block {
 	    background: #fff;
+	    text-align: center;
 		
 		a {
 			display: inline-block;	
@@ -744,6 +751,7 @@ aside {
 
 		ul {
 			list-style: none;
+			text-align: center;
 
 			li {
 				display: inline-block;
