--- a/css/flexnav.css
+++ b/css/flexnav.css
@@ -8,7 +8,12 @@
   overflow: hidden;
   margin: 0 auto;
   width: 100%;
-  max-height: 0; }
+  max-height: 0; 
+ 	font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 14px;
+	text-transform: uppercase;
+}
   .flexnav.opacity {
     opacity: 0; }
   .flexnav.flexnav-show {
@@ -23,6 +28,10 @@
     top: 50px;
     right: 5%;
     max-width: 200px; }
+.flexnav a:hover {
+	text-decoration: underline;
+}
+
   .flexnav li {
     font-size: 100%;
     position: relative;
@@ -34,7 +43,8 @@
     z-index: 2;
     overflow: hidden;
     color: #222222;
-    background: #a6a6a2;
+    background: #26d2fc;
+    text-decoration: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15); }
   .flexnav li ul {
     width: 100%; }
@@ -46,7 +56,7 @@
     overflow: visible; }
   .flexnav li ul li a {
     display: block;
-    background: #b2b2af; }
+    background: #75e3fe;}
   .flexnav ul li ul li a {
     background: #bfbfbc; }
   .flexnav ul li ul li ul li a {
@@ -56,8 +66,8 @@
     z-index: 999;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 50px;
+    width: 46px;
+    height: 45px;
     display: inline-block;
     background: #acaca1;
     background: rgba(0, 0, 0, 0.075);
@@ -68,16 +78,21 @@
       position: relative;
       top: 1.4em;
       font-size: 12px;
-      color: #666; }
+      color: #000; }
 
 .menu-button {
   position: relative;
   display: block;
   padding: 1em;
-  background: #a6a6a2;
-  color: #222222;
   cursor: pointer;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2); 
+   	font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 14px;
+	text-transform: uppercase;
+	color: #fff;
+	background: #333;
+}
   .menu-button.one-page {
     position: fixed;
     top: 0;
@@ -89,17 +104,17 @@
     z-index: 999;
     top: 0;
     right: 0;
-    width: 50px;
-    height: 50px;
+    width: 46px;
+    height: 45px;
     display: inline-block;
     text-align: center; }
     .menu-button .touch-button .navicon {
       font-size: 16px;
       position: relative;
       top: 1em;
-      color: #666; }
+      color: #fff; }
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 960px) {
   body.one-page {
     padding-top: 70px; }
 
@@ -127,7 +142,7 @@
       top: auto;
       left: 0; }
       .flexnav li > ul li {
-        width: 100%; }
+	width: 100%; }
     .flexnav li ul li > ul {
       margin-left: 100%;
       top: 0; }
@@ -139,11 +154,11 @@
       visibility: visible;
       z-index: 1; }
       .flexnav li ul.open li {
-        overflow: visible;
-        max-height: 100px; }
+	overflow: visible;
+	max-height: 100px; }
       .flexnav li ul.open ul.open {
-        margin-left: 100%;
-        top: 0; }
+	margin-left: 100%;
+	top: 0; }
 
   .menu-button {
     display: none; } }
@@ -206,3 +221,4 @@
   display: none; }
 .oldie.ie7 .flexnav li {
   width: 19.9%; }
+
