--- a/less/style.less
+++ b/less/style.less
@@ -1,9 +1,6 @@
 @import url('variables.less');
 
 
-body {
-	max-width: 1500px;
-}
 .top-wrapper {
 	width: 100%;
 	background: @bg-main;
@@ -81,11 +78,26 @@ header {
 	.cart__block {
 		float: left;
 		width: 270px;
+
+		@media screen and (max-width: 1178px) {
+			width: 240px;
+    	}	
+		@media screen and (max-width: 960px) {
+			width: 100%;
+    	}
+
 	}
 
 	.container {
 		float: right;
 		width: 74%;
+
+		@media screen and (max-width: 960px) {
+			width: 100%;
+    	}
+		@media screen and (max-width: 480px) {
+			display: none;
+    	}
 		
 		.slider__content-wrapper{
 			color: #fff51f;
@@ -94,6 +106,14 @@ header {
 		    float: right;
 		    margin-right: 92px;
 	        padding: 106px 0 105px 0;
+
+     	    @media screen and (max-width: 1178px) {
+				width: 65%;
+  	    	}	
+
+  	    	@media screen and (max-width: 960px) {
+				width: 75%;
+  	    	}
 		
 			h1 {
 				font-weight: 900;
@@ -157,12 +177,17 @@ header {
 			&:focus {
 				text-decoration: underline;
 			}
+			.media-fontsize-a;
 		}
 	}
 
 	.cart {
 		background: #fb4d01;
 		overflow: hidden;
+
+		@media screen and (max-width: 960px) {
+			text-align: center;    
+    	}
 
 		img,
 		.cash__block,
@@ -178,6 +203,10 @@ header {
 		    width: 50%;
 		    .raleway;
 		    padding-left: 1px;
+
+    		@media screen and (max-width: 1178px) {
+				width: 41%;
+	    	}
 		}
 
 	    .cash__cart {
@@ -195,7 +224,7 @@ header {
 		
 
 		.cart__control {
-
+				
 			a {
 				display: block;
 				text-align: center;
@@ -203,6 +232,7 @@ header {
 				text-transform: uppercase;
 				color: @main-font-color;
 				font-size: 10px;
+				.media-fontsize-a;
 			}
 
 			.delete__cart {
@@ -231,6 +261,7 @@ header {
 		font-weight: 400;	    
     	text-transform: uppercase;
     	overflow: hidden;
+    	.media-fontsize-a;
     	
     	.view__cart,
     	.checkout {
@@ -270,6 +301,8 @@ header {
 			font-weight: 400;
 			text-transform: uppercase;
 			padding: 13px 0 12px 14px;
+			width: 83%;
+			.media-fontsize-a;
 		}
 
 		button {
@@ -299,6 +332,10 @@ header {
 	padding: 79px 25px 82px 21px;
 	background: #fff51f;
 
+	@media screen and (max-width: 960px) {
+		display: none;
+	}
+
 	h2 {
 		font-size: 30px;
 		text-transform: uppercase;
@@ -314,13 +351,21 @@ header {
 }
 
 .main-wrap {
-	max-width: 1500px;
 	background: #f8f8f8;
 
 	.clearfix:after {
 		content: "";
 		display: table;
 		clear: both;
+	}
+
+	/* mobile__navigation */
+	.mobile__navigation {
+		position: absolute;
+
+ 	    @media screen and (max-width: 960px) {
+			position: static;
+  	    }
 	}
 
 	.main {
@@ -331,6 +376,14 @@ header {
 			float: left;
 			width: 270px;
 			margin-top: -20px;
+
+			@media screen and (max-width: 1178px) {
+				width: 240px;
+			    margin-top: 20px;
+  	    	}
+  	    	@media screen and (max-width: 960px) {
+				display: none;
+  	    	}
 		}
 
 		.products {
@@ -338,6 +391,11 @@ header {
 			width: 74%;
 			margin-top: -20px;
 			background: #f8f8f8;
+
+			@media screen and (max-width: 960px) {
+				width: 100%;
+				margin-top: 10px;
+  	    	}
 		}
 
 		.bottom__content {
@@ -439,9 +497,6 @@ aside {
 			color: #fff;
 		}
 	}
-    /***mobile__navigation ***/
-
-    /***mobile__navigation ***/
 	.banner__block {
 		margin: 33px 0 0 0;
 		width: 49%;
@@ -727,16 +782,13 @@ aside {
 				text-decoration: none;
 				display: block;
 				margin: 0 auto;
+				padding-left: 28px;
 				width: 25%;
+				background: url(../img/insta-icon.png) 0% 0% no-repeat;
 
-				i {
-					float: left;
-					display: block;
-					height: 28px;
-					width: 28px;
-					background: url(../img/insta-icon.png) 39% 50% no-repeat;
-
-				}
+				@media screen and (max-width: 960px) {
+					width: 50%;
+			    }
 
 				&:hover,
 				&:focus {
@@ -755,8 +807,7 @@ aside {
 
 			li {
 				display: inline-block;
-				margin-right: 9px;
-
+				
 				&:hover,
 				&:focus {
 					opacity: 0.8;
@@ -833,6 +884,10 @@ aside {
 		-ms-flex-wrap: nowrap;
 		flex-wrap: nowrap;
 
+		@media screen and (max-width: 880px) {
+			display: block;
+	    }
+
 		.category {
 		   margin-left: 30px;
 		}
@@ -846,6 +901,15 @@ aside {
 			margin-right: 30px;
 			overflow: hidden;
 			line-height: 18px;
+
+			@media screen and (max-width: 1050px) {
+				margin-right: 15px;
+    		}
+
+    		@media screen and (max-width: 880px) {
+				float: left;
+				width: 25%;		    
+			}
 
 			h2 {
 				.raleway;
@@ -876,6 +940,22 @@ aside {
 			width: 270px;
 			margin-right: 30px;
 			line-height: 18px;
+
+			@media screen and (max-width: 1050px) {
+				margin-right: 15px;
+				width: 240px;
+    		}
+			
+			@media screen and (max-width: 880px) {
+				float: left;
+				width: 40%;
+				margin: 45px 4%;
+    		}
+
+    		@media screen and (max-width: 480px) {
+				width: 100%;
+				margin-right: 3%;
+		    }
 
 			h2 {
 				.raleway;
@@ -944,6 +1024,21 @@ aside {
 		    line-height: 12px;
 		    margin-right: 28px;
 
+	    	@media screen and (max-width: 960px) {
+				width: 230px;
+		    }
+
+			@media screen and (max-width: 880px) {
+				float: left;
+				width: 40%;
+				margin: 45px 4%;
+    		}
+
+    		@media screen and (max-width: 480px) {
+				width: 90%;
+				margin-right: 3%;
+		    }
+
 			h2 {
 				.raleway;
 				font-size: 18px;
@@ -988,6 +1083,11 @@ aside {
 		background: @main-font-color;
 		padding: 22px 0 16px;
 		margin-top: 64px;
+
+		@media screen and (max-width: 880px) {
+			margin-top: 0;
+		}
+
 		p {
 			color: #dad9d9;
 			.roboto;
