--- a/less/variables.less
+++ b/less/variables.less
@@ -11,10 +11,6 @@
 @product-h: #717171;
 
 
-
-
-
-
 /* Wobble Vertical  Animation*/
 .wobble-vertical {
 	display: inline-block;
@@ -105,3 +101,9 @@
 	    transform: translateY(0);
 	  }
 	}
+
+.media-fontsize-a {
+	@media screen and (max-width: 960px) {
+		font-size: 20px;
+    }
+}
