--- a/css/style.css
+++ b/css/style.css
@@ -419,10 +419,12 @@ header .social-icon select option {
 }
 .main-wrap .mobile__navigation {
   position: absolute;
+  z-index: -10;
 }
 @media screen and (max-width: 960px) {
   .main-wrap .mobile__navigation {
     position: static;
+    z-index: 1;
   }
 }
 .main-wrap .main {
