--- a/less/style.less
+++ b/less/style.less
@@ -362,9 +362,11 @@ header {
 	/* mobile__navigation */
 	.mobile__navigation {
 		position: absolute;
+		z-index: -10;
 
  	    @media screen and (max-width: 960px) {
 			position: static;
+			z-index: 1;
   	    }
 	}
 
