--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,5 @@
 @import url('variables.less');
-
+@import url('contact.less');
 
 .top-wrapper {
 	width: 100%;
@@ -26,7 +26,8 @@ header {
 	.social-icon {
 		float: right;
 		font-size: 0;
-		margin: 50px 16px 0 0px;
+		padding: 10px 14px 10px 24px;
+		margin: 40px 16px 0 0px;
 
 		a {
 			margin-right: 11px;
@@ -392,7 +393,7 @@ header {
 			float: right;
 			width: 74%;
 			margin-top: -20px;
-			background: #f8f8f8;
+			background: @main-bg-color;
 
 			@media screen and (max-width: 960px) {
 				width: 100%;
