--- a/less/variables.less
+++ b/less/variables.less
@@ -9,6 +9,14 @@
 @control-color-hover: #fbde06;
 @main-font-color: #333;
 @product-h: #717171;
+@main-bg-color: #f8f8f8;
+@breadcrubms-color: #989898;
+
+
+.bg-social-icon-contact {
+	background: #c1c1c1;
+	opacity: 0.7;
+}
 
 
 /* Wobble Vertical  Animation*/
